Fix minor layout issues

--- a/public/output.css
+++ b/public/output.css
@@ -2090,6 +2090,11 @@ input.tab:checked + .tab-content,
   margin-bottom: 0px;
 }
 
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
 .flex {
   display: flex;
 }
@@ -2294,6 +2299,11 @@ input.tab:checked + .tab-content,
   padding-bottom: 1.5rem;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -2308,6 +2318,14 @@ input.tab:checked + .tab-content,
 
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
